--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
             <div class="carousel-caption d-md-block">
               <h5>The perfect vanue for your <span class="d-block"> next event </span></h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="d-block"> Natus, facilis! </span></p>
-              <button class="bg-white text-primary fw-bold border rounded">Book Now</button>
+              <a href="https://www.klccconventioncentre.com/"><button class="bg-white text-primary fw-bold border rounded">Book Now</button></a>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item w-100">
             <img src="images/banner-2.jpg" class="d-block w-100 h-auto" alt="...">
             <div class="carousel-caption d-md-block">
               <h5>The perfect vanue for your <span class="d-block"> next event </span></h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="d-block"> Natus, facilis!</span></p>
-              <button class="bg-white text-primary fw-bold border rounded">Book Now</button>
+              <a href="https://www.klccconventioncentre.com/"><button class="bg-white text-primary fw-bold border rounded">Book Now</button></a>
             </div>
           </div>
           <div class="carousel-item">
@@ -77,7 +77,7 @@
             <div class="carousel-caption d-md-block">
               <h5>The perfect vanue for your <span class="d-block"> next event </span></h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="d-block"> Natus, facilis!</span></p>
-              <button class="bg-white text-primary fw-bold border rounded">Book Now</button>
+               <a href="https://www.klccconventioncentre.com/"><button class="bg-white text-primary fw-bold border rounded">Book Now</button></a>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
       <div class="col-12 col-md-6 col-lg-6">
           <h1>Every moment is Precious </h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nobis necessitatibus, harum est quibusdam quis magni veritatis alias repellendus eligendi.</p>
-          <button class="bg-primary text-white border rounded fw-bold p-2">Explore our album</button>
+          <a href="https://www.sugarnspiceevents.com/weddings.cfm?gclid=Cj0KCQiAubmPBhCyARIsAJWNpiMZ01RI9wYlUSlMCLqWJH1_ndGN17ZhFpeOO6ciYhcBs3QmBXMt_0QaAv1JEALw_wcB"><button class="bg-primary text-white border rounded fw-bold p-2">Explore our album</button></a>
       </div>
       <div class="toast show mt-5" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
@@ -167,8 +167,8 @@
             <button class="bg-secondary text-white ps-5 pe-5 border rounded-pill">Choose plan</button>
           </div>
 
-          <div class="col-12 col-md-6 col-lg-3 bg-primary text-white rounded-3 pt-4 pb-4" >
-            
+          <div class="col-12 col-md-6 col-lg-3 bg-info text-white rounded-3 pt-4 pb-4 position-relative" >
+            <div class="position-absolute top-0 start-100 translate-middle bg-danger rounded-pill p-1 fw-bold"> Event </div>
             <h2 class="p-2 ">$800</h2>
             <h4 class="p-2">Business fair</h4>
             <p class="p-2">
