--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <!-- css style sheet -->
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- header start -->
@@ -49,7 +51,7 @@
       </nav>
       <!-- navbar end -->
       <!-- image slide start -->
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel ">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" >
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -57,24 +59,24 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img  src="images/banner.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-md-block">
+            <img  src="images/banner.png" class="d-block w-100" alt="..." id="image-responsive">
+            <div class="carousel-caption ">
               <h5>The perfect vanue for your <span class="d-block"> next event </span></h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="d-block"> Natus, facilis! </span></p>
-              <a href="https://www.klccconventioncentre.com/"><button class="bg-white text-primary fw-bold border rounded">Book Now</button></a>
+              <a href="https://www.klccconventioncentre.com/"></a><button class="bg-white text-primary fw-bold border rounded">Book Now</button></a>
             </div>
           </div>
           <div class="carousel-item w-100">
-            <img src="images/banner-2.jpg" class="d-block w-100 h-auto" alt="...">
-            <div class="carousel-caption d-md-block">
+            <img src="images/banner-2.jpg" class="d-block w-100 " alt="..." id="image-responsive">
+            <div class="carousel-caption ">
               <h5>The perfect vanue for your <span class="d-block"> next event </span></h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="d-block"> Natus, facilis!</span></p>
-              <a href="https://www.klccconventioncentre.com/"><button class="bg-white text-primary fw-bold border rounded">Book Now</button></a>
+              <a class="responsive" href="https://www.klccconventioncentre.com/"></a><button class="bg-white text-primary fw-bold border rounded">Book Now</button></a>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/banner-3 (1).png" class="d-block w-100 h-auto" alt="...">
-            <div class="carousel-caption d-md-block">
+            <img src="images/banner-3 (1).png" class="d-block w-100 " alt="..." id="image-responsive">
+            <div class="carousel-caption ">
               <h5>The perfect vanue for your <span class="d-block"> next event </span></h5>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="d-block"> Natus, facilis!</span></p>
                <a href="https://www.klccconventioncentre.com/"><button class="bg-white text-primary fw-bold border rounded">Book Now</button></a>
@@ -106,7 +108,7 @@
       <div class="col-12 col-md-6 col-lg-6">
           <h1>Every moment is Precious </h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nobis necessitatibus, harum est quibusdam quis magni veritatis alias repellendus eligendi.</p>
-          <a href="https://www.sugarnspiceevents.com/weddings.cfm?gclid=Cj0KCQiAubmPBhCyARIsAJWNpiMZ01RI9wYlUSlMCLqWJH1_ndGN17ZhFpeOO6ciYhcBs3QmBXMt_0QaAv1JEALw_wcB"><button class="bg-primary text-white border rounded fw-bold p-2">Explore our album</button></a>
+          <a href="https://www.sugarnspiceevents.com/weddings.cfm?gclid=Cj0KCQiAubmPBhCyARIsAJWNpiMZ01RI9wYlUSlMCLqWJH1_ndGN17ZhFpeOO6ciYhcBs3QmBXMt_0QaAv1JEALw_wcB"><button class="bg-primary text-white border rounded fw-bold p-2">Explore our album <i class="fas fa-long-arrow-alt-right"></i></button></a>
       </div>
       <div class="toast show mt-5" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
@@ -120,7 +122,7 @@
 <!-- weeding end -->
 <!-- our package start -->
       <section class="container mt-5">
-        <h1 class="text-center pb-5 pt-4">Our package</h1>
+        <h1 class="text-center pb-5 pt-4 text-info">Our package</h1>
         <div class="row">
           <div class="col-12 col-md-6 col-lg-3 pt-4 pb-4">
             <h2 class="p-2">$300</h2>
@@ -168,7 +170,7 @@
           </div>
 
           <div class="col-12 col-md-6 col-lg-3 bg-info text-white rounded-3 pt-4 pb-4 position-relative" >
-            <div class="position-absolute top-0 start-100 translate-middle bg-danger rounded-pill p-1 fw-bold"> Event </div>
+            <div class="position-absolute top-0 end-0 translate-middle bg-danger rounded-pill p-1 fw-bold"> Event </div>
             <h2 class="p-2 ">$800</h2>
             <h4 class="p-2">Business fair</h4>
             <p class="p-2">
@@ -298,6 +300,7 @@
         <button type="submit" class="btn btn-secondary">Submit</button>
       </form>
     </section>
+    <!-- form end -->
     </main>
     <!-- footer start -->
     <footer class="bg-dark overflow-hidden mt-5 p-5  ">
@@ -314,8 +317,7 @@
               <small class="text-white">Download on the</small>
               <h5 class="text-white">App Store</h5>
             </div>
-          
-        </div>
+            </div>
         
           <div class="d-flex border border-2 rounded-3 ms-auto mt-3 p-2">
             <a href="https://play.google.com/store"><i class="fab fa-google-play"></i></a>
