--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <button class="bg-secondary text-white ps-5 pe-5 border rounded-pill">Choose plan</button>
           </div>
 
-          <div class="col-12 col-md-6 col-lg-3 bg-info text-white rounded-3 pt-4 pb-4 position-relative" >
+          <div class="col-12 col-md-6 col-lg-3 bg-info text-white rounded-3 pt-4 pb-4 position-relative" id="business-fair">
             <div class="position-absolute top-0 end-0 translate-middle bg-danger rounded-pill p-1 fw-bold"> Event </div>
             <h2 class="p-2 ">$800</h2>
             <h4 class="p-2">Business fair</h4>
@@ -303,7 +303,7 @@
     <!-- form end -->
     </main>
     <!-- footer start -->
-    <footer class="bg-dark overflow-hidden mt-5 p-5  ">
+    <!-- <footer class="bg-dark overflow-hidden mt-5 p-5  ">
        <div class="row">
         <div class="col-12 col-md-12 col-lg-6 d-flex align-items-center justify-content-center">
           <p class="text-white"><i class="far fa-copyright pe-1"></i>2020 bike. All rights reserved</p>
@@ -328,10 +328,34 @@
           </div>
         </div>
       </div>
-     </footer>  
+     </footer>   -->
     <!-- footer end -->
 
+     <footer class="bg-dark m-auto p-5">
+      
+        <div class="flexible-container">
+          <div>
+            <p class="reserved"><i class="far fa-copyright"></i> 2020 bike. All rights reserved</p>
+          </div>
 
+         <div>
+           <p class="reserved padding">Get away</p>
+           <div class="flexible">
+           <div class="reserved"><i class="fab fa-apple"></i></div>
+           <div>
+           <small class="reserved padding">Download on the app store</small>
+           <h4 class="reserved">App Store</h4>
+          </div>
+         </div>
+         <div class="flexible">
+          <div class="reserved padding-left"><i class="fab fa-google-play"></i></div>
+          <div>
+          <small class="reserved">Download on the app store</small>
+          <h4 class="reserved">App Store</h4>
+         </div>
+        </div>
+        </div>
+     </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
