--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <!-- css style sheet -->
+    <!-- css style sheet --> <!-- css style sheet -->
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
